Add Users Model with Devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,18 @@
 <html>
 	<head>
 	  <title>Omrails</title>
-	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= stylesheet_link_tag "application", :media => "all" %>
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
-		<%= render "layouts/header" %>
-			
+				<%= render "layouts/header" %>
 			<div class="container">
-			<%= yield %>
-			<%= render "layouts/footer" %>
+				<%= flash.each do |name, msg| %>
+				<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+				<% end %>	
+				<%= yield %>
+				<%= render "layouts/footer" %>
 			</div>
 	</body>
 </html>
