--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 	<body>
 				<%= render "layouts/header" %>
 			<div class="container">
-				<%= flash.each do |name, msg| %>
+				<%# The "=" sign before flash.each places unknown curly braces inside the page, so I took off the "=" sign.%>
+				<% flash.each do |name, msg| %>
 				<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
 				<% end %>	
 				<%= yield %>
