--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -3,8 +3,13 @@
 		<div class="well">
 			<p>
 			  <%= @pin.description %>
+			</p>
+			<p>
+			  <%= @pin.user.name %>
 			</p>	
-			<%= link_to 'Edit', edit_pin_path(@pin) %> |
+			<% if current_user == @pin.user %>
+				<%= link_to 'Edit', edit_pin_path(@pin) %> |
+			<% end %>
 			<%= link_to 'Back', pins_path %>
 		</div>
 	</div>
