--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -20,9 +20,39 @@ body {
 }*/ /*This will take out the shadow beneath the nav bar*/ 
 
 .footer {
+	position: fixed;
+	bottom: 0%;
+	padding-bottom: 10px;
 	margin-top: 50px;
 	color: $grayLight;
 	a {
 		color: gray;
 	}
+}
+
+/* Required for jQuery Masonry */
+
+.box {
+	margin: 5px;
+	padding: 5px;
+	font-size: 11px;
+	line-height: 1.4em;
+	float: left;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	box-shadow: 1px 1px 10px #444;
+	width: 214px;
+}
+
+.box img {
+	display: block;
+	width: 100%;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.description {
+	margin: 5px 0 5px;
 }
