--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,5 @@
-<% if user_signed_in? %>
-	<h1>You're logged in!</h1>
-<% else %>	
+# You can put anything you want here this is at the _home.html.erb partial file
+<% unless user_signed_in? %>	
 	<div class="hero-unit">
 		<h1>Welcome to One Month Rails!</h1>
 		<p>
