Add Image Uploading via URL

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,7 +1,7 @@
 # You can put anything you want here this is at the _home.html.erb partial file
 <% unless user_signed_in? %>	
 	<div class="hero-unit">
-		<h1>Welcome to One Month Rails!</h1>
+		<h1>Welcome to Zairo's Site!</h1>
 		<p>
 			You've found the home page for the
 			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
